1. replace uglify-es with uglify-js@3 2. rewrite plugin code to make logic clear

--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
   "author": "will.liu90525@gmail.com",
   "license": "MIT",
   "dependencies": {
-    "uglify-es": "^3.3.9"
+    "uglify-js": "^3.4.9"
   }
 }
